Make sure document miniatures icons disappear on smaller screens

--- a/content/scss/_component.document-miniature.scss
+++ b/content/scss/_component.document-miniature.scss
@@ -115,4 +115,10 @@
 			display: inline-block;
 		}
 	}
+
+	@include for-phone-only	{
+		.document-miniature__type {
+			display: none;
+		}
+	}
 }
